k8s/eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bia-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: bia-eks-application-load-balancer
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: bia-eks-vpc-public-subnet-1a,bia-eks-vpc-public-subnet-1b
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bia
            port:
              number: 8080
